--- a/CaloriesPFC_Calculator_WPF/CaloriesPFC_Calculator_WPF.csproj
+++ b/CaloriesPFC_Calculator_WPF/CaloriesPFC_Calculator_WPF.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <Folder Include="Infrastracture\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="ViewModels\Base\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
