--- a/CaloriesPFC_Calculator_WPF/CaloriesPFC_Calculator_WPF.csproj
+++ b/CaloriesPFC_Calculator_WPF/CaloriesPFC_Calculator_WPF.csproj
@@ -11,7 +11,7 @@
     <Folder Include="Infrastracture\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
-    <Folder Include="ViewModels\Base\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
   </ItemGroup>
 
